samples/_failures_safe/1761622866_e8eb07_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5de82a83.c: In function ‘generate_sample_logs’:
./samples/SAFE/__tmp_5de82a83.c:138:9: error: missing terminating " character
  138 |         "2024-01
      |         ^~~~~~~~
./samples/SAFE/__tmp_5de82a83.c:138:9: error: expected expression at end of input
./samples/SAFE/__tmp_5de82a83.c:138:9: error: expected declaration or statement at end of input
